prettify for release

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,19 @@
 			content='width=device-width, initial-scale=1, shrink-to-fit=no'
 		>
 		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-			integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-			crossorigin="anonymous"
+			rel='stylesheet'
+			href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
+			integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ'
+			crossorigin='anonymous'
 			async
 		>
 		<link
-			href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700"
-			rel="stylesheet"
+			href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700'
+			rel='stylesheet'
 			async
 		>
   </head>
   <body>
+		<!-- Root for Preact. -->
   </body>
 </html>
