use jquery etc from cdn

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,35 @@
 			href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
 			integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ'
 			crossorigin='anonymous'
-			async
 		>
 		<link
 			href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700'
 			rel='stylesheet'
-			async
+		>
+		<link
+			rel='stylesheet'
+			href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
+			integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T'
+			crossorigin='anonymous'
 		>
 		<title>instapy.io</title>
-  </head>
-  <body>
+	</head>
+	<body>
 		<!-- Root for Preact. -->
-  </body>
+		<script
+			src='https://code.jquery.com/jquery-3.3.1.slim.min.js'
+			integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo'
+			crossorigin='anonymous'
+		></script>
+		<script
+			src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js'
+			integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1'
+			crossorigin='anonymous'
+		></script>
+		<script
+			src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'
+			integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM'
+			crossorigin='anonymous'
+		></script>
+	</body>
 </html>
