--- a/src/index.htm
+++ b/src/index.htm
@@ -25,7 +25,24 @@
 		<title>instapy.io</title>
 	</head>
 	<body>
-		<!-- Root for Preact. -->
+		<script type='text/javascript'>
+			// Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
+			(function(l) {
+				if (!l.search) { return; }
+				var q = {};
+				l.search.slice(1).split('&').forEach(function(v) {
+					var a = v.split('=');
+					q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+				});
+				if (q.p !== undefined) {
+					window.history.replaceState(null, null,
+					l.pathname.slice(0, -1) + (q.p || '') +
+					(q.q ? ('?' + q.q) : '') +
+					l.hash
+					);
+				}
+			}(window.location))
+		</script>
 		<script
 			src='https://code.jquery.com/jquery-3.3.1.slim.min.js'
 			integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo'
@@ -41,5 +58,6 @@
 			integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM'
 			crossorigin='anonymous'
 		></script>
+		<!-- Root for Preact. -->
 	</body>
 </html>
