Use adsense on top level domain to allow usage on docs.instapy.io
Signed-off-by: Felix Breuer <f.breuer94@gmail.com>

--- a/src/index.htm
+++ b/src/index.htm
@@ -22,6 +22,12 @@
 			integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T'
 			crossorigin='anonymous'
 		>
+		<!-- AdSense needs to be on the top level domain to use it for docs.instapy.io -->
+		<script
+			async
+			data-ad-client='ca-pub-4875789012193531'
+			src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js'
+		></script>
 		<title>instapy.io</title>
 	</head>
 	<body>
